--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             </svg>
           </a>
           <a
-            href="https://wa.me/996555123456"
+            href="https://wa.me/996556525111"
             class="social-link social-whatsapp"
             target="_blank"
             rel="noopener noreferrer"
@@ -316,7 +316,7 @@
             </svg>
           </a>
           <a
-            href="https://go.2gis.com/kWt7B"
+            href="https://go.2gis.com/Fodrr"
             class="social-link social-2gis"
             target="_blank"
             rel="noopener noreferrer"
