добавил описание товаров

--- a/index.html
+++ b/index.html
@@ -382,10 +382,11 @@
                   женьшенем. 30 мл
                 </div>
                 <div class="product-slide-details">
-                  <h4>Премиальный уход</h4>
+                  <h4>Омоложение и обновление</h4>
                   <p>
-                    Инновационная формула с активными компонентами для
-                    комплексного омоложения кожи.
+                    Обновляет кожу и разглаживает морщины
+                    Выравнивает тон и делает кожу упругой
+                    Борется с воспалениями и придаёт сияние
                   </p>
                   <a
                     href="https://wa.me/996556525111"
