добавил описание товаровх2

--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
                   <h4>Омоложение и обновление</h4>
                   <p>
                     Обновляет кожу и разглаживает морщины
-                    Выравнивает тон и делает кожу упругой
-                    Борется с воспалениями и придаёт сияние
+                    Выравнивает тон и делает кожу упругой,
+                    борется с воспалениями и придаёт сияние
                   </p>
                   <a
                     href="https://wa.me/996556525111"
@@ -409,13 +409,13 @@
                   Коллагеновый стик с соком ABC
                 </div>
                 <div class="product-slide-description">
-                  Увлажнение, питание, защита
+                  Коллагеновые джели-стики Mipeum
                 </div>
                 <div class="product-slide-details">
-                  <h4>Ежедневный уход</h4>
+                  <h4>Ежедневный уход, вкусный и удобный</h4>
                   <p>
-                    улучшает состояние кожи, укрепляет сосуды, поддерживает
-                    детокс-эффект и обмен веществ.
+                    Каждая порция содержит низкомолекулярный коллаген, который легко
+                    усваивается организмом, а также витамины и экстракты, усиливающие действие формулы.
                   </p>
                   <a
                     href="https://wa.me/996556525111"
@@ -431,16 +431,16 @@
               <div class="product-slide">
                 <img
                   src="images/product3.png"
-                  alt="Очищение"
+                  alt="Shiseido Fino Premium Touch Hair Mask"
                   class="product-slide-image"
                 />
-                <div class="product-slide-name">Очищение</div>
-                <div class="product-slide-description">Мицеллярка, пенки</div>
+                <div class="product-slide-name">Shiseido Fino Premium Touch Hair Mask</div>
+                <div class="product-slide-description">Восстанавливающая маска для волос</div>
                 <div class="product-slide-details">
-                  <h4>Средства для очищения</h4>
+                  <h4>Уход для повреждённых, сухих и тусклых волос</h4>
                   <p>
-                    Мицеллярная вода, пенки, гели и тоники для умывания. Бережно
-                    очищают кожу.
+                    Формула с шестью видами ухаживающих компонентов глубоко
+                    питает, восстанавливает структуру и придаёт блеск от корней до кончиков.
                   </p>
                   <a
                     href="https://wa.me/996556525111"
