добавил описание товаровх3

--- a/index.html
+++ b/index.html
@@ -459,13 +459,12 @@
                   alt="Очищение"
                   class="product-slide-image"
                 />
-                <div class="product-slide-name">Маникюр</div>
-                <div class="product-slide-description">Лаки, базы, топы</div>
+                <div class="product-slide-name">Honey Deep Moist Treatment</div>
+                <div class="product-slide-description">Шампунь и бальзам для волос</div>
                 <div class="product-slide-details">
-                  <h4>Продукты для маникюра</h4>
+                  <h4>Скоро..</h4>
                   <p>
-                    Лаки для ногтей, базовые и топовые покрытия, средства для
-                    укрепления ногтей.
+                    Скоро..
                   </p>
                   <a
                     href="https://wa.me/996556525111"
